2007-02-19  Chris Lumens  <clumens@redhat.com>

	* pykickstart/base.py (BaseHandler.maskAllExcept):  Renamed from
	empty.
	(BaseHandler.__init__):  Accept a mapping argument in the format of
	what's in pykickstart.handlers.control, for when you're overriding all
	the handlers with your own versions.

	* pykickstart/commands/langsupport.py (FC3_LangSupport.__str__):  Add
	a newline.

	* pykickstart/commands/reboot.py:  Provide a default return value in
	the __str__ methods to fix a traceback.

2007-02-19  Chris Lumens  <clumens@redhat.com>

	* pykickstart/commands/*.py:  All command objects now have an
	underscore between the version part and the name for ease of
	processing.
	* pykickstart/handlers/control.py (commandMap):  Likewise.

	* pykickstart/base.py (BaseHandler._setCommand):  Strip version part
	from name before creating the attribute.

	* pykickstart/version.py (versionToString):  Added a method to convert
	version numbers back into strings, which is needed for the above
	change.

2007-02-19  Chris Lumens  <clumens@redhat.com>

	* pykickstart/base.py:  Moved here from pykickstart/commands and adapt
	to new layout.

	* pykickstart/version.py:  Accept short forms of version strings again
	and adapt to new layout.

	* pykickstart/commands/*.py:  Broke each command out into its own file
	and put all the versions of that command handler together.  Idea and
	mock up from Peter Jones (<pjones AT redhat.com>).

	* pykickstart/handlers/*.py:  Moved handlers into their own directory.

	* pykickstart/handlers/control.py:  Add a file laying out which
	commands are supported by each version and exactly where they can be
	found.  This should help readability of the code quite a bit.

2007-02-14  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  New version.

2007-02-14  Chris Lumens  <clumens@redhat.com>

	* pykickstart/parser.py (KickstartParser.__init__):  Don't need to
	take a version argument since the Parser can get that from the
	Handler.
